Checkpoints/Checkpt#8 Complete/y.output
Grammar

    0 $accept: program $end

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON

    2 data: DATA COLON fulldeclaration
    3     | DATA COLON

    4 fulldeclaration: declaration
    5                | declaration fulldeclaration

    6 declaration: datatype COLON varlist SEMICOLON

    7 datatype: REAL
    8         | INTEGER

    9 varlist: item
   10        | item COMMA varlist
   11        | /* empty */

   12 item: VARIABLE
   13     | VARIABLE LBRACKET INTCONSTANT RBRACKET

   14 algorithm: ALGORITHM COLON body

   15 body: statement body
   16     | /* empty */

   17 statement: assignment
   18          | countup
   19          | countdown
   20          | ifstatement
   21          | ifesle
   22          | whileloop
   23          | read
   24          | print
   25          | exit

   26 assignment: variable ASSIGN fullexpression SEMICOLON

   27 ifstatement: IF fullexpression SEMICOLON body END IF SEMICOLON

   28 ifesle: IF fullexpression SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON

   29 whileloop: WHILE fullexpression SEMICOLON body END WHILE SEMICOLON

   30 countup: COUNTING variable UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

   31 countdown: COUNTING variable DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

   32 exit: EXIT SEMICOLON

   33 read: READ variable SEMICOLON

   34 print: PRINT printlist SEMICOLON

   35 printlist: printitem
   36          | printitem COMMA printlist

   37 printitem: fullexpression
   38          | STRING
   39          | CARRIAGERETURN

   40 fullexpression: comparison
   41               | NOT fullexpression
   42               | comparison AND fullexpression
   43               | comparison OR fullexpression

   44 comparison: expression
   45           | comparison LESSTHAN expression
   46           | comparison GREATERTHAN expression
   47           | comparison LESSOREQUAL expression
   48           | comparison GREATEROREQUAL expression
   49           | comparison EQUAL expression
   50           | comparison NOTEQUAL expression

   51 expression: term
   52           | expression ADDITION term
   53           | expression SUBTRACTION term
   54           | SUBTRACTION term

   55 term: factor
   56     | term MULTIPLICATION factor
   57     | term DIVISION factor
   58     | term MODULUS factor

   59 factor: atom
   60       | LPARENTH fullexpression RPARENTH

   61 atom: variable
   62     | INTCONSTANT
   63     | REALCONSTANT

   64 variable: VARIABLE
   65         | VARIABLE LBRACKET fullexpression RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
ADDITION (258) 52
SUBTRACTION (259) 53 54
MULTIPLICATION (260) 56
DIVISION (261) 57
MODULUS (262) 58
LESSTHAN (263) 45
GREATERTHAN (264) 46
LESSOREQUAL (265) 47
GREATEROREQUAL (266) 48
EQUAL (267) 49
NOTEQUAL (268) 50
AND (269) 42
OR (270) 43
NOT (271) 41
LPARENTH (272) 60
RPARENTH (273) 60
LBRACKET (274) 13 65
RBRACKET (275) 13 65
SEMICOLON (276) 1 6 26 27 28 29 30 31 32 33 34
COLON (277) 2 3 6 14
COMMA (278) 10 36
ASSIGN (279) 26
CARRIAGERETURN (280) 39
MAIN (281) 1
END (282) 1 27 28 29 30 31
EXIT (283) 32
IF (284) 27 28
ELSE (285) 28
WHILE (286) 29
TO (287) 30 31
COUNTING (288) 30 31
UPWARD (289) 30
DOWNWARD (290) 31
REAL (291) 7
INTEGER (292) 8
DATA (293) 2 3
ALGORITHM (294) 14
READ (295) 33
PRINT (296) 34
VARIABLE (297) 12 13 64 65
STRING (298) 38
INTCONSTANT (299) 13 62
REALCONSTANT (300) 63


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
data (48)
    on left: 2 3, on right: 1
fulldeclaration (49)
    on left: 4 5, on right: 2 5
declaration (50)
    on left: 6, on right: 4 5
datatype (51)
    on left: 7 8, on right: 6
varlist (52)
    on left: 9 10 11, on right: 6 10
item (53)
    on left: 12 13, on right: 9 10
algorithm (54)
    on left: 14, on right: 1
body (55)
    on left: 15 16, on right: 14 15 27 28 29 30 31
statement (56)
    on left: 17 18 19 20 21 22 23 24 25, on right: 15
assignment (57)
    on left: 26, on right: 17
ifstatement (58)
    on left: 27, on right: 20
ifesle (59)
    on left: 28, on right: 21
whileloop (60)
    on left: 29, on right: 22
countup (61)
    on left: 30, on right: 18
countdown (62)
    on left: 31, on right: 19
exit (63)
    on left: 32, on right: 25
read (64)
    on left: 33, on right: 23
print (65)
    on left: 34, on right: 24
printlist (66)
    on left: 35 36, on right: 34 36
printitem (67)
    on left: 37 38 39, on right: 35 36
fullexpression (68)
    on left: 40 41 42 43, on right: 26 27 28 29 30 31 37 41 42 43 60
    65
comparison (69)
    on left: 44 45 46 47 48 49 50, on right: 40 42 43 45 46 47 48 49
    50
expression (70)
    on left: 51 52 53 54, on right: 44 45 46 47 48 49 50 52 53
term (71)
    on left: 55 56 57 58, on right: 51 52 53 54 56 57 58
factor (72)
    on left: 59 60, on right: 55 56 57 58
atom (73)
    on left: 61 62 63, on right: 59
variable (74)
    on left: 64 65, on right: 26 30 31 33 61


state 0

    0 $accept: . program $end

    MAIN  shift, and go to state 1

    program  go to state 2


state 1

    1 program: MAIN . SEMICOLON data algorithm END MAIN SEMICOLON

    SEMICOLON  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: MAIN SEMICOLON . data algorithm END MAIN SEMICOLON

    DATA  shift, and go to state 5

    data  go to state 6


state 4

    0 $accept: program $end .

    $default  accept


state 5

    2 data: DATA . COLON fulldeclaration
    3     | DATA . COLON

    COLON  shift, and go to state 7


state 6

    1 program: MAIN SEMICOLON data . algorithm END MAIN SEMICOLON

    ALGORITHM  shift, and go to state 8

    algorithm  go to state 9


state 7

    2 data: DATA COLON . fulldeclaration
    3     | DATA COLON .

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    $default  reduce using rule 3 (data)

    fulldeclaration  go to state 12
    declaration      go to state 13
    datatype         go to state 14


state 8

   14 algorithm: ALGORITHM . COLON body

    COLON  shift, and go to state 15


state 9

    1 program: MAIN SEMICOLON data algorithm . END MAIN SEMICOLON

    END  shift, and go to state 16


state 10

    7 datatype: REAL .

    $default  reduce using rule 7 (datatype)


state 11

    8 datatype: INTEGER .

    $default  reduce using rule 8 (datatype)


state 12

    2 data: DATA COLON fulldeclaration .

    $default  reduce using rule 2 (data)


state 13

    4 fulldeclaration: declaration .
    5                | declaration . fulldeclaration

    REAL     shift, and go to state 10
    INTEGER  shift, and go to state 11

    $default  reduce using rule 4 (fulldeclaration)

    fulldeclaration  go to state 17
    declaration      go to state 13
    datatype         go to state 14


state 14

    6 declaration: datatype . COLON varlist SEMICOLON

    COLON  shift, and go to state 18


state 15

   14 algorithm: ALGORITHM COLON . body

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 16 (body)

    body         go to state 26
    statement    go to state 27
    assignment   go to state 28
    ifstatement  go to state 29
    ifesle       go to state 30
    whileloop    go to state 31
    countup      go to state 32
    countdown    go to state 33
    exit         go to state 34
    read         go to state 35
    print        go to state 36
    variable     go to state 37


state 16

    1 program: MAIN SEMICOLON data algorithm END . MAIN SEMICOLON

    MAIN  shift, and go to state 38


state 17

    5 fulldeclaration: declaration fulldeclaration .

    $default  reduce using rule 5 (fulldeclaration)


state 18

    6 declaration: datatype COLON . varlist SEMICOLON

    VARIABLE  shift, and go to state 39

    $default  reduce using rule 11 (varlist)

    varlist  go to state 40
    item     go to state 41


state 19

   32 exit: EXIT . SEMICOLON

    SEMICOLON  shift, and go to state 42


state 20

   27 ifstatement: IF . fullexpression SEMICOLON body END IF SEMICOLON
   28 ifesle: IF . fullexpression SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 48
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 21

   29 whileloop: WHILE . fullexpression SEMICOLON body END WHILE SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 55
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 22

   30 countup: COUNTING . variable UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   31 countdown: COUNTING . variable DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    VARIABLE  shift, and go to state 25

    variable  go to state 56


state 23

   33 read: READ . variable SEMICOLON

    VARIABLE  shift, and go to state 25

    variable  go to state 57


state 24

   34 print: PRINT . printlist SEMICOLON

    SUBTRACTION     shift, and go to state 43
    NOT             shift, and go to state 44
    LPARENTH        shift, and go to state 45
    CARRIAGERETURN  shift, and go to state 58
    VARIABLE        shift, and go to state 25
    STRING          shift, and go to state 59
    INTCONSTANT     shift, and go to state 46
    REALCONSTANT    shift, and go to state 47

    printlist       go to state 60
    printitem       go to state 61
    fullexpression  go to state 62
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 25

   64 variable: VARIABLE .
   65         | VARIABLE . LBRACKET fullexpression RBRACKET

    LBRACKET  shift, and go to state 63

    $default  reduce using rule 64 (variable)


state 26

   14 algorithm: ALGORITHM COLON body .

    $default  reduce using rule 14 (algorithm)


state 27

   15 body: statement . body

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 16 (body)

    body         go to state 64
    statement    go to state 27
    assignment   go to state 28
    ifstatement  go to state 29
    ifesle       go to state 30
    whileloop    go to state 31
    countup      go to state 32
    countdown    go to state 33
    exit         go to state 34
    read         go to state 35
    print        go to state 36
    variable     go to state 37


state 28

   17 statement: assignment .

    $default  reduce using rule 17 (statement)


state 29

   20 statement: ifstatement .

    $default  reduce using rule 20 (statement)


state 30

   21 statement: ifesle .

    $default  reduce using rule 21 (statement)


state 31

   22 statement: whileloop .

    $default  reduce using rule 22 (statement)


state 32

   18 statement: countup .

    $default  reduce using rule 18 (statement)


state 33

   19 statement: countdown .

    $default  reduce using rule 19 (statement)


state 34

   25 statement: exit .

    $default  reduce using rule 25 (statement)


state 35

   23 statement: read .

    $default  reduce using rule 23 (statement)


state 36

   24 statement: print .

    $default  reduce using rule 24 (statement)


state 37

   26 assignment: variable . ASSIGN fullexpression SEMICOLON

    ASSIGN  shift, and go to state 65


state 38

    1 program: MAIN SEMICOLON data algorithm END MAIN . SEMICOLON

    SEMICOLON  shift, and go to state 66


state 39

   12 item: VARIABLE .
   13     | VARIABLE . LBRACKET INTCONSTANT RBRACKET

    LBRACKET  shift, and go to state 67

    $default  reduce using rule 12 (item)


state 40

    6 declaration: datatype COLON varlist . SEMICOLON

    SEMICOLON  shift, and go to state 68


state 41

    9 varlist: item .
   10        | item . COMMA varlist

    COMMA  shift, and go to state 69

    $default  reduce using rule 9 (varlist)


state 42

   32 exit: EXIT SEMICOLON .

    $default  reduce using rule 32 (exit)


state 43

   54 expression: SUBTRACTION . term

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    term      go to state 70
    factor    go to state 52
    atom      go to state 53
    variable  go to state 54


state 44

   41 fullexpression: NOT . fullexpression

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 71
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 45

   60 factor: LPARENTH . fullexpression RPARENTH

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 72
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 46

   62 atom: INTCONSTANT .

    $default  reduce using rule 62 (atom)


state 47

   63 atom: REALCONSTANT .

    $default  reduce using rule 63 (atom)


state 48

   27 ifstatement: IF fullexpression . SEMICOLON body END IF SEMICOLON
   28 ifesle: IF fullexpression . SEMICOLON body ELSE SEMICOLON body END IF SEMICOLON

    SEMICOLON  shift, and go to state 73


state 49

   40 fullexpression: comparison .
   42               | comparison . AND fullexpression
   43               | comparison . OR fullexpression
   45 comparison: comparison . LESSTHAN expression
   46           | comparison . GREATERTHAN expression
   47           | comparison . LESSOREQUAL expression
   48           | comparison . GREATEROREQUAL expression
   49           | comparison . EQUAL expression
   50           | comparison . NOTEQUAL expression

    LESSTHAN        shift, and go to state 74
    GREATERTHAN     shift, and go to state 75
    LESSOREQUAL     shift, and go to state 76
    GREATEROREQUAL  shift, and go to state 77
    EQUAL           shift, and go to state 78
    NOTEQUAL        shift, and go to state 79
    AND             shift, and go to state 80
    OR              shift, and go to state 81

    $default  reduce using rule 40 (fullexpression)


state 50

   44 comparison: expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 44 (comparison)


state 51

   51 expression: term .
   56 term: term . MULTIPLICATION factor
   57     | term . DIVISION factor
   58     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 84
    DIVISION        shift, and go to state 85
    MODULUS         shift, and go to state 86

    $default  reduce using rule 51 (expression)


state 52

   55 term: factor .

    $default  reduce using rule 55 (term)


state 53

   59 factor: atom .

    $default  reduce using rule 59 (factor)


state 54

   61 atom: variable .

    $default  reduce using rule 61 (atom)


state 55

   29 whileloop: WHILE fullexpression . SEMICOLON body END WHILE SEMICOLON

    SEMICOLON  shift, and go to state 87


state 56

   30 countup: COUNTING variable . UPWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON
   31 countdown: COUNTING variable . DOWNWARD fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    UPWARD    shift, and go to state 88
    DOWNWARD  shift, and go to state 89


state 57

   33 read: READ variable . SEMICOLON

    SEMICOLON  shift, and go to state 90


state 58

   39 printitem: CARRIAGERETURN .

    $default  reduce using rule 39 (printitem)


state 59

   38 printitem: STRING .

    $default  reduce using rule 38 (printitem)


state 60

   34 print: PRINT printlist . SEMICOLON

    SEMICOLON  shift, and go to state 91


state 61

   35 printlist: printitem .
   36          | printitem . COMMA printlist

    COMMA  shift, and go to state 92

    $default  reduce using rule 35 (printlist)


state 62

   37 printitem: fullexpression .

    $default  reduce using rule 37 (printitem)


state 63

   65 variable: VARIABLE LBRACKET . fullexpression RBRACKET

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 93
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 64

   15 body: statement body .

    $default  reduce using rule 15 (body)


state 65

   26 assignment: variable ASSIGN . fullexpression SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 94
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 66

    1 program: MAIN SEMICOLON data algorithm END MAIN SEMICOLON .

    $default  reduce using rule 1 (program)


state 67

   13 item: VARIABLE LBRACKET . INTCONSTANT RBRACKET

    INTCONSTANT  shift, and go to state 95


state 68

    6 declaration: datatype COLON varlist SEMICOLON .

    $default  reduce using rule 6 (declaration)


state 69

   10 varlist: item COMMA . varlist

    VARIABLE  shift, and go to state 39

    $default  reduce using rule 11 (varlist)

    varlist  go to state 96
    item     go to state 41


state 70

   54 expression: SUBTRACTION term .
   56 term: term . MULTIPLICATION factor
   57     | term . DIVISION factor
   58     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 84
    DIVISION        shift, and go to state 85
    MODULUS         shift, and go to state 86

    $default  reduce using rule 54 (expression)


state 71

   41 fullexpression: NOT fullexpression .

    $default  reduce using rule 41 (fullexpression)


state 72

   60 factor: LPARENTH fullexpression . RPARENTH

    RPARENTH  shift, and go to state 97


state 73

   27 ifstatement: IF fullexpression SEMICOLON . body END IF SEMICOLON
   28 ifesle: IF fullexpression SEMICOLON . body ELSE SEMICOLON body END IF SEMICOLON

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 16 (body)

    body         go to state 98
    statement    go to state 27
    assignment   go to state 28
    ifstatement  go to state 29
    ifesle       go to state 30
    whileloop    go to state 31
    countup      go to state 32
    countdown    go to state 33
    exit         go to state 34
    read         go to state 35
    print        go to state 36
    variable     go to state 37


state 74

   45 comparison: comparison LESSTHAN . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 99
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 75

   46 comparison: comparison GREATERTHAN . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 100
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 76

   47 comparison: comparison LESSOREQUAL . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 101
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 77

   48 comparison: comparison GREATEROREQUAL . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 102
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 78

   49 comparison: comparison EQUAL . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 103
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 79

   50 comparison: comparison NOTEQUAL . expression

    SUBTRACTION   shift, and go to state 43
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    expression  go to state 104
    term        go to state 51
    factor      go to state 52
    atom        go to state 53
    variable    go to state 54


state 80

   42 fullexpression: comparison AND . fullexpression

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 105
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 81

   43 fullexpression: comparison OR . fullexpression

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 106
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 82

   52 expression: expression ADDITION . term

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    term      go to state 107
    factor    go to state 52
    atom      go to state 53
    variable  go to state 54


state 83

   53 expression: expression SUBTRACTION . term

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    term      go to state 108
    factor    go to state 52
    atom      go to state 53
    variable  go to state 54


state 84

   56 term: term MULTIPLICATION . factor

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    factor    go to state 109
    atom      go to state 53
    variable  go to state 54


state 85

   57 term: term DIVISION . factor

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    factor    go to state 110
    atom      go to state 53
    variable  go to state 54


state 86

   58 term: term MODULUS . factor

    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    factor    go to state 111
    atom      go to state 53
    variable  go to state 54


state 87

   29 whileloop: WHILE fullexpression SEMICOLON . body END WHILE SEMICOLON

    EXIT      shift, and go to state 19
    IF        shift, and go to state 20
    WHILE     shift, and go to state 21
    COUNTING  shift, and go to state 22
    READ      shift, and go to state 23
    PRINT     shift, and go to state 24
    VARIABLE  shift, and go to state 25

    $default  reduce using rule 16 (body)

    body         go to state 112
    statement    go to state 27
    assignment   go to state 28
    ifstatement  go to state 29
    ifesle       go to state 30
    whileloop    go to state 31
    countup      go to state 32
    countdown    go to state 33
    exit         go to state 34
    read         go to state 35
    print        go to state 36
    variable     go to state 37


state 88

   30 countup: COUNTING variable UPWARD . fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 113
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 89

   31 countdown: COUNTING variable DOWNWARD . fullexpression TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 114
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 90

   33 read: READ variable SEMICOLON .

    $default  reduce using rule 33 (read)


state 91

   34 print: PRINT printlist SEMICOLON .

    $default  reduce using rule 34 (print)


state 92

   36 printlist: printitem COMMA . printlist

    SUBTRACTION     shift, and go to state 43
    NOT             shift, and go to state 44
    LPARENTH        shift, and go to state 45
    CARRIAGERETURN  shift, and go to state 58
    VARIABLE        shift, and go to state 25
    STRING          shift, and go to state 59
    INTCONSTANT     shift, and go to state 46
    REALCONSTANT    shift, and go to state 47

    printlist       go to state 115
    printitem       go to state 61
    fullexpression  go to state 62
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 93

   65 variable: VARIABLE LBRACKET fullexpression . RBRACKET

    RBRACKET  shift, and go to state 116


state 94

   26 assignment: variable ASSIGN fullexpression . SEMICOLON

    SEMICOLON  shift, and go to state 117


state 95

   13 item: VARIABLE LBRACKET INTCONSTANT . RBRACKET

    RBRACKET  shift, and go to state 118


state 96

   10 varlist: item COMMA varlist .

    $default  reduce using rule 10 (varlist)


state 97

   60 factor: LPARENTH fullexpression RPARENTH .

    $default  reduce using rule 60 (factor)


state 98

   27 ifstatement: IF fullexpression SEMICOLON body . END IF SEMICOLON
   28 ifesle: IF fullexpression SEMICOLON body . ELSE SEMICOLON body END IF SEMICOLON

    END   shift, and go to state 119
    ELSE  shift, and go to state 120


state 99

   45 comparison: comparison LESSTHAN expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 45 (comparison)


state 100

   46 comparison: comparison GREATERTHAN expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 46 (comparison)


state 101

   47 comparison: comparison LESSOREQUAL expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 47 (comparison)


state 102

   48 comparison: comparison GREATEROREQUAL expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 48 (comparison)


state 103

   49 comparison: comparison EQUAL expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 49 (comparison)


state 104

   50 comparison: comparison NOTEQUAL expression .
   52 expression: expression . ADDITION term
   53           | expression . SUBTRACTION term

    ADDITION     shift, and go to state 82
    SUBTRACTION  shift, and go to state 83

    $default  reduce using rule 50 (comparison)


state 105

   42 fullexpression: comparison AND fullexpression .

    $default  reduce using rule 42 (fullexpression)


state 106

   43 fullexpression: comparison OR fullexpression .

    $default  reduce using rule 43 (fullexpression)


state 107

   52 expression: expression ADDITION term .
   56 term: term . MULTIPLICATION factor
   57     | term . DIVISION factor
   58     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 84
    DIVISION        shift, and go to state 85
    MODULUS         shift, and go to state 86

    $default  reduce using rule 52 (expression)


state 108

   53 expression: expression SUBTRACTION term .
   56 term: term . MULTIPLICATION factor
   57     | term . DIVISION factor
   58     | term . MODULUS factor

    MULTIPLICATION  shift, and go to state 84
    DIVISION        shift, and go to state 85
    MODULUS         shift, and go to state 86

    $default  reduce using rule 53 (expression)


state 109

   56 term: term MULTIPLICATION factor .

    $default  reduce using rule 56 (term)


state 110

   57 term: term DIVISION factor .

    $default  reduce using rule 57 (term)


state 111

   58 term: term MODULUS factor .

    $default  reduce using rule 58 (term)


state 112

   29 whileloop: WHILE fullexpression SEMICOLON body . END WHILE SEMICOLON

    END  shift, and go to state 121


state 113

   30 countup: COUNTING variable UPWARD fullexpression . TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    TO  shift, and go to state 122


state 114

   31 countdown: COUNTING variable DOWNWARD fullexpression . TO fullexpression SEMICOLON body END COUNTING SEMICOLON

    TO  shift, and go to state 123


state 115

   36 printlist: printitem COMMA printlist .

    $default  reduce using rule 36 (printlist)


state 116

   65 variable: VARIABLE LBRACKET fullexpression RBRACKET .

    $default  reduce using rule 65 (variable)


state 117

   26 assignment: variable ASSIGN fullexpression SEMICOLON .

    $default  reduce using rule 26 (assignment)


state 118

   13 item: VARIABLE LBRACKET INTCONSTANT RBRACKET .

    $default  reduce using rule 13 (item)


state 119

   27 ifstatement: IF fullexpression SEMICOLON body END . IF SEMICOLON

    IF  shift, and go to state 124


state 120

   28 ifesle: IF fullexpression SEMICOLON body ELSE . SEMICOLON body END IF SEMICOLON

    SEMICOLON  shift, and go to state 125


state 121

   29 whileloop: WHILE fullexpression SEMICOLON body END . WHILE SEMICOLON

    WHILE  shift, and go to state 126


state 122

   30 countup: COUNTING variable UPWARD fullexpression TO . fullexpression SEMICOLON body END COUNTING SEMICOLON

    SUBTRACTION   shift, and go to state 43
    NOT           shift, and go to state 44
    LPARENTH      shift, and go to state 45
    VARIABLE      shift, and go to state 25
    INTCONSTANT   shift, and go to state 46
    REALCONSTANT  shift, and go to state 47

    fullexpression  go to state 127
    comparison      go to state 49
    expression      go to state 50
    term            go to state 51
    factor          go to state 52
    atom            go to state 53
    variable        go to state 54


state 123

   31 countdown: COUNTING variable DOWNWARD fullexpression TO . fullexpression SEMICOLON body END COUNTING SEMICOLON
